# qwiva

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  _02_fetch_store.py  _03_parse_chunk.py  app.json  config.py  corpus-manifest.json  db.py  fly.toml  package-lock.json  pipeline.py  pyproject.toml  railway.json  railway.toml  render.yaml  stage1_metadata.py  upload_local.py
app/: case.tsx  index.tsx
app/(tabs)/: feed.tsx  me.tsx  pulse.tsx
app/onboarding/: _layout.tsx  login.tsx  phone.tsx  register.tsx  rotation.tsx  splash.tsx  verify.tsx
backend/: auth.py  config.py  conversations.py  db.py  main.py  models.py  profiles.py  rag.py  social.py  surveys.py
docs/: architecture.md
docs/diagrams/: Untitled-2026-04-24-2303.excalidraw  V1.excalidraw  generate_diagrams.py  qwiva_data_flow.excalidraw  qwiva_detailed.excalidraw  qwiva_high_level.excalidraw
evals/: config.py  dataset.py  pipeline.py  report.py  run_evals.py
evals/datasets/: clinical_questions.json
evals/metrics/: clinical.py  deepeval_runner.py  latency.py  ragas_runner.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnswerCard.tsx  BrandLogo.tsx  ChatInput.tsx  CommentThread.tsx  Navbar.tsx  (+11 more)
mobile/: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  app.json  package-lock.json  package.json
scripts/: backfill_fts.py  ingest_cpg_to_qdrant.py  ingest_pdf.py  migrate_drugs_to_qdrant.py  migrate_to_qdrant.py  test_retrieval.py  validate_qdrant.py
(+125 files in other folders)
